Fixed modal.css style to appear scrollbar on small monitors; other small fixes

--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,7 @@
     text-align: left;
     padding-left: 85px;
     padding-top: 30px;
+	padding-bottom: 30px;
 }
 
 .huglogin {
